--- a/CaronaSocial/CaronaSocial/Storyboards/Home.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Home.storyboard
@@ -520,12 +520,6 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oKA-j1-sXY">
                                                     <rect key="frame" x="16" y="16" width="45" height="45"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                            <integer key="value" value="22"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aW7-nS-m1k">
                                                     <rect key="frame" x="80" y="92" width="134" height="21"/>
@@ -579,7 +573,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Caronas" id="wXe-Qs-rkm"/>
                     <connections>
-                        <segue destination="Qu2-IY-c9Q" kind="show" identifier="goToDriversScreen" id="3lx-5f-rWw"/>
+                        <segue destination="Qu2-IY-c9Q" kind="modal" identifier="goToDriversScreen" modalPresentationStyle="fullScreen" id="3lx-5f-rWw"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kHs-X3-1M8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -595,12 +589,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="GHY-vb-hYU">
-                                <rect key="frame" x="20" y="104" width="374" height="758"/>
+                                <rect key="frame" x="20" y="60" width="374" height="802"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="knW-wc-9TB">
                                         <rect key="frame" x="0.0" y="0.0" width="226" height="60"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Media - Circle" translatesAutoresizingMaskIntoConstraints="NO" id="Ol1-lR-jfj">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ol1-lR-jfj">
                                                 <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="60" id="IZm-bl-Uci"/>
@@ -777,10 +771,9 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="4aT-GS-DRC">
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed d" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4aT-GS-DRC">
                                                 <rect key="frame" x="0.0" y="36.5" width="374" height="58.5"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -788,10 +781,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="lNm-fv-xkk">
-                                        <rect key="frame" x="0.0" y="670.5" width="374" height="87.5"/>
+                                        <rect key="frame" x="0.0" y="670.5" width="374" height="131.5"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eul-Ne-wE5">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="41.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="85.5"/>
                                                 <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="Enviar mensagem">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -806,7 +799,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B7f-KC-qI5">
-                                                <rect key="frame" x="0.0" y="57.5" width="374" height="30"/>
+                                                <rect key="frame" x="0.0" y="101.5" width="374" height="30"/>
                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Requisitar carona"/>
                                                 <userDefinedRuntimeAttributes>
@@ -840,13 +833,14 @@
                     <connections>
                         <outlet property="accessibility" destination="bkW-0X-sNe" id="ntk-m8-XjC"/>
                         <outlet property="name" destination="DEl-th-lLQ" id="soz-x3-Ktt"/>
+                        <outlet property="observation" destination="4aT-GS-DRC" id="DL5-vI-pwy"/>
                         <outlet property="profileImage" destination="Ol1-lR-jfj" id="r6P-XE-RlG"/>
                         <outlet property="vacantyNumber" destination="eOj-0O-kkc" id="Kaq-Yx-myU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2i9-VC-3vN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3771.0144927536235" y="180.80357142857142"/>
+            <point key="canvasLocation" x="3762" y="181"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xwx-8T-Y8F">
@@ -888,7 +882,6 @@
     <resources>
         <image name="Grupo 628" width="18" height="18"/>
         <image name="Grupo 629" width="2" height="14"/>
-        <image name="Media - Circle" width="45" height="45"/>
         <image name="cadeirante" width="17" height="20"/>
         <image name="placeholder" width="13" height="18"/>
         <image name="vagas" width="16" height="23"/>
